[tool.poetry]
name = "treepca"
version = "0.1.0"
description = ""
authors = ["MURAWAKI Yugo <murawaki@i.kyoto-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<=3.12"
python-nexus = "^2.9.0"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
